--- a/main.html
+++ b/main.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+	<button id="openModal">Open Modal</button>
+	<div class="modal">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h2>Modal Header</h2>
+				<span class="close-modal">&times;</span>
+			</div>
+			<div class="modal-body">
+				<p>Modal Body Content</p>
+			</div>
+		</div>
+	</div>
+    <script type="text/javascript" src="./script.js"></script>
 </body>
-
 </html>
